@@ -14,3 +14,8 @@ gnome-gen-mimedb
 gnome-portability.h
 libgnome-2.0.pc
 test-libgnome
+libgnome.defs
+libgnometypebuiltins.h
+libgnometypebuiltins_evals.c
+libgnometypebuiltins_ids.c
+libgnometypebuiltins_vars.c
