@@ -1,0 +1,6 @@
+; -*- scheme -*-
+
+; These definitions here cause the creation of some new GTK_TYPE_* ids
+; The code doesn't benefit most C programs directly, but is very useful
+; for language bindings.
+
